# cffi

./: .gitignore  CMakeLists.txt  README.md
include/: cffi.h
src/: cffi.c  cffi.s
test/: test_call.cpp
